--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,13 +1,15 @@
-.App {
+body {
   text-align: center;
-}
-
-.App-header {
   background-color: #282c34;
+  color: white;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: start;
-  color: white;
+
+}
+
+div.App {
+  width: 400px;
 }
